--- a/index.html
+++ b/index.html
@@ -17,19 +17,42 @@
 </head>
 
 <body>
-  <h2>Aprendiendo HTML</h2>
+  <h2 id="inicio">Aprendiendo HTML</h2>
   <p>Hola, escribiendo mi primer documento HTML</p>
   <p>Aprendiendo sobre Diseño Web</p>
+  <h3>Temario Del Curso</h3>
+  <ul>
+    <li><a href="index.html#encabezados">Encabezados HTML</a></li>
+    <li><a href="index.html#texto_basico">Etiquetas de Texto Básicas</a></li>
+    <li><a href="index.html#texto_semantico">Etiquetas de Texto Semánticas</a></li>
+    <li><a href="index.html#etiquetas_saltos">Etiquetas de Saltos</a></li>
+    <li><a href="index.html#etiquetas_formateo">Etiquetas de Formateo</a></li>
+    <li><a href="index.html#etiquetas_semanticas_estructurales">Etiquetas Semánticas Estructurales</a></li>
+    <li><a href="index.html#etiquetas_bloque_linea">Etiquetas de Bloque vs Etiquetas de Línea</a></li>
+    <li><a href="index.html#estilos_css">Estilos CSS en HTML</a></li>
+    <li><a href="index.html#scripts">Scripts en HTML</a></li>
+    <li><a href="index.html#imagenes">Imágenes</a></li>
+    <li><a href="index.html#figuras">Figuras</a></li>
+    <li><a href="index.html#listas_ordenadas">Listas Ordenadas</a></li>
+    <li><a href="index.html#listas_desordenadas">Listas Desordenadas</a></li>
+    <li><a href="index.html#listas_definicion">Listas de Definición</a></li>
+    <li><a href="index.html#tablas">Tablas</a></li>
+    <li><a href="index.html#enlaces">Enlaces</a></li>
+    <li><a href="index.html#elementos_interactivos">Elementos Interactivos</a></li>
+    <li><a href="index.html#audio_video">Audio y Video</a></li>
+    <li><a href="index.html#iframes">Iframes</a></li>
+  </ul>
   <hr>
-  <h2>Encabezados HTML</h2>
+  <h2 id="encabezados">Encabezados HTML</h2>
   <h1>Encabezado de Nivel 1 - Sólo puede existir un H1 por documento HTML</h1>
   <h2>Encabezado de Nivel 2</h2>
   <h3>Encabezado de Nivel 3</h3>
   <h4>Encabezado de Nivel 4</h4>
   <h5>Encabezado de Nivel 5</h5>
   <h6>Encabezado de Nivel 6</h6>
+  <a href="index.html#inicio">⏫</a>
   <hr>
-  <h2>Etiquetas de Texto Básicas</h2>
+  <h2 id="texto_basico">Etiquetas de Texto Básicas</h2>
   <p>Un párrafo</p>
   <p>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur eveniet, adipisci aliquam fugiat unde
@@ -40,23 +63,26 @@
     e=mc<sup>2</sup>, H<sub>2</sub>O, <mark>marcatexto</mark>,
     <small>letras pequeñas</small>
   </p>
+  <a href="index.html#inicio">⏫</a>
   <hr>
-  <h2>Etiquetas de Texto Semánticas</h2>
+  <h2 id="texto_semantico">Etiquetas de Texto Semánticas</h2>
   <p>
     <strong>Este texto es importante</strong>,
     <em>Este texto hace enfasis</em>
   </p>
   <blockquote>Yo solo sé, que no se nada</blockquote>
   <cite>Sócrates</cite>
+  <a href="index.html#inicio">⏫</a>
   <hr>
-  <h2>Etiquetas de Saltos</h2>
+  <h2 id="etiquetas_saltos">Etiquetas de Saltos</h2>
   <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Labore nulla impedit corrupti vitae consequatur nam
     quasi molestias doloribus aut error, modi nesciunt reprehenderit,<br> consectetur nostrum
     quaerat repellat maiores praesentium. Veniam.
   </p>
+  <a href="index.html#inicio">⏫</a>
   <hr>
-  <h2>Etiquetas de Formateo</h2>
+  <h2 id="etiquetas_formateo">Etiquetas de Formateo</h2>
   <p>
   <pre>
         Tareas por Hacer
@@ -83,8 +109,9 @@
         </code>
       </pre>
   </p>
+  <a href="index.html#inicio">⏫</a>
   <hr>
-  <h2>Etiquetas Semánticas Estructurales</h2>
+  <h2 id="etiquetas_semanticas_estructurales">Etiquetas Semánticas Estructurales</h2>
   <div>Es una etiqueta contenedora que no tiene semántica</div>
   <header>header - Cabecera de un sitio web o de una sección</header>
   <main>main - Define la sección principal del documento, sólo puede existir una etiqueta main por documento</main>
@@ -94,31 +121,37 @@
   <aside>aside - Representa contenido complementario o secundario</aside>
   <section>section - Representa una sección de contenido genérico</section>
   <address>address - Representa una información de contacto</address>
+  <a href="index.html#inicio">⏫</a>
   <hr>
-  <h2>Etiquetas de Bloque vs Etiquetas de Línea</h2>
+  <h2 id="etiquetas_bloque_linea">Etiquetas de Bloque vs Etiquetas de Línea</h2>
   <div style="background-color: yellow; color: red;">La etiqueta de bloque por excelencia es la div, una etiqueta de
     bloque es aquella que genera saltos de línea con sus etiquetas hermanas.</div>
   <span style="background-color: greenyellow;">La etiqueta de línea por excelencia es la span, una etiqueta de línea
     solo ocupa el espacio necesario que tiene su contenido.</span>
   <span>Hola soy otra span</span>
+  <a href="index.html#inicio">⏫</a>
   <hr>
-  <h2>Estilos CSS en HTML</h2>
+  <h2 id="estilos_css">Estilos CSS en HTML</h2>
+  <a href="index.html#inicio">⏫</a>
   <hr>
-  <h2>Scripts en HTML</h2>
+  <h2 id="scripts">Scripts en HTML</h2>
+  <a href="index.html#inicio">⏫</a>
   <hr>
-  <h2>Imágenes</h2>
+  <h2 id="imagenes">Imágenes</h2>
   <img src="./src/Periodic table html.jpg.jpg" alt="Tabla de los elementos HTML" width="700px" height="400px">
   <img src="./src/Binance.png.png" alt="Binance" width="900px">
   <img src="./src/Barca_gira.gif" alt="Barca_gira">
   <img src="./src/cat-face.svg" alt="cat-face">
+  <a href="index.html#inicio">⏫</a>
   <hr>
-  <h2>Figuras</h2>
+  <h2 id="figuras">Figuras</h2>
   <figure>
     <img src="./src/Periodic table html.jpg.jpg" alt="Tabla de los elementos HTML" width="700px" height="400px">
     <figcaption>Tabla de los elementos HTML</figcaption>
   </figure>
+  <a href="index.html#inicio">⏫</a>
   <hr>
-  <h2>Listas ordenadas</h2>
+  <h2 id="listas_ordenadas">Listas Ordenadas</h2>
   <h3>Las Estaciones del Año</h3>
   <ol>
     <li>Primavera</li>
@@ -144,8 +177,9 @@
     <li>Otoño</li>
     <li>Invierno</li>
   </ol>
+  <a href="index.html#inicio">⏫</a>
   <hr>
-  <h2>Listas Desordenadas</h2>
+  <h2 id="listas_desordenadas">Listas Desordenadas</h2>
   <h3>Cosas por Hacer</h3>
   <ul>
     <li>Terminar de grabar los fragmentos del curso de HTML</li>
@@ -162,8 +196,9 @@
     <li>Editar el video final</li>
     <li>Subirlo a Youtube</li>
   </ul>
+  <a href="index.html#inicio">⏫</a>
   <hr>
-  <h2>Listas de Definición</h2>
+  <h2 id="listas_definicion">Listas de Definición</h2>
   <dl>
     <dt>HTML</dt>
     <dd>Es un lenguaje de marcado que define el contenido de la web</dd>
@@ -172,8 +207,9 @@
     <dt>Javascript</dt>
     <dd>Es el lenguaje de la web</dd>
   </dl>
+  <a href="index.html#inicio">⏫</a>
   <hr>
-  <h2>Tablas</h2>
+  <h2 id="tablas">Tablas</h2>
   <table>
     <tr>
       <td>Nombre</td>
@@ -240,8 +276,9 @@
       </tr>
     </tfoot>
   </table>
+  <a href="index.html#inicio">⏫</a>
   <hr>
-  <h2>Enlaces</h2>
+  <h2 id="enlaces">Enlaces</h2>
   <a href="./hola.html">Hacia la página Hola</a>
   <a href="https://colorhunt.co/" target="_blank" rel="nofollow">VIsita ColorHunt</a>
   <br>
@@ -251,6 +288,55 @@
   <a href="https:Youtube.com" target="_blank">
     <img src="./src/youtube.svg" alt="Ir a Youtube">
   </a>
+  <br>
+  <a href="mailto:inciochristian@gmail.com">Enlace a correo electrónico</a>
+  <br>
+  <a href="tel:51931751930">Enlace a teléfono</a>
+  <br>
+  <a href="https://api.Whatsapp.com/send?phone=51931751930&text=Hola">Enlace hacia Whatsapp</a>
+  <br>
+  <a href="index.html#inicio">⏫</a>
+  <hr>
+  <h2 id="elementos_interactivos">Elementos Interactivos</h2>
+  <button onclick="alert('Hola, haz clickeado el botón')">Este es un botón</button>
+  <details>
+    <summary>Título del Acordeón</summary>
+    <article>
+      <h3>Contenido del Acordeón</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non aperiam consequatur dolorem asperiores soluta,
+        praesentium tenetur sequi voluptatum perspiciatis ducimus iusto voluptates saepe velit. Obcaecati amet natus
+        aspernatur quibusdam! Ad.</p>
+      <img src="./src/Barca_gira.gif" alt="Barca">
+    </article>
+  </details>
+  <br>
+  <details open>
+    <summary>Título del Acordeón</summary>
+    <article>
+      <h3>Contenido del Acordeón</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non aperiam consequatur dolorem asperiores soluta,
+        praesentium tenetur sequi voluptatum perspiciatis ducimus iusto voluptates saepe velit. Obcaecati amet natus
+        aspernatur quibusdam! Ad.</p>
+      <img src="./src/Barca_gira.gif" alt="Barca">
+    </article>
+  </details>
+  <dialog open>
+    Esta es una ventana modal en HTML
+  </dialog>
+  <a href="index.html#inicio">⏫</a>
+  <hr>
+  <h2 id="audio_video">Audio y Video</h2>
+  <audio src="./media/dile-grupo-5.mp3" controls preload></audio>
+  <br>
+  <video src="./media/video-tortas.MOV" controls preload poster="./src/tortas.JPG" width="700px" height="500px"></video>
+  <br>
+  <a href="index.html#inicio">⏫</a>
+  <hr>
+  <h2 id="iframes">Iframes</h2>
+  <iframe src="./hola.html" frameborder="1"></iframe>
+  <br>
+  <iframe src="https://colorhunt.co/" frameborder="1"></iframe>
+  <a href="index.html#inicio">⏫</a>
 
   <script>
     console.log("Hola estamos aprendiendo HTML")
