--- a/index.html
+++ b/index.html
@@ -336,6 +336,19 @@
   <iframe src="./hola.html" frameborder="1"></iframe>
   <br>
   <iframe src="https://colorhunt.co/" frameborder="1"></iframe>
+  <br>
+  <iframe src="./media/fullstack.pdf" frameborder="1"></iframe>
+  <br>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3901.428785555913!2d-76.93090932565848!3d-12.
+  082770942570722!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c72867ee3c4f%3A0x918c5611759a3784!2s
+  Molicentro!5e0!3m2!1ses!2spe!4v1689138493443!5m2!1ses!2spe" width="600" height="450" style="border:0;"
+    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  <br>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/SNenrWbZoYo" title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen></iframe>
+  <br>
   <a href="index.html#inicio">⏫</a>
 
   <script>
