--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <title>Aprendiendo HTML</title>
   <!-- description - no más de 165 caracteres -->
   <meta name="description" content="Aprendiendo los fundamentos de HTML" />
+  <link rel="canonical" href="http://tudominio.com/la-url-canonica">
+  <link rel="icon" href="./src/html5.png">
+  <link rel="apple-touch-icon" href="./src/html5.png">
+  <meta name="theme-color" content="#FF6600">
+  <meta property="og:title" content="Aprendiendo HTML">
+  <meta property="og:description" content="Aprendiendo los fundamentos de HTML">
+  <meta property="og:image" content="https://tudominio.com/src/html5.png">
+  <meta property="og:url" content="https://tudominio.com/index.html">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@christiancasana">
   <style>
     h2 {
       color: orangered;
@@ -43,6 +53,9 @@
     <li><a href="index.html#iframes">Iframes</a></li>
     <li><a href="index.html#formularios">Formularios</a></li>
     <li><a href="index.html#data_attributes">Data Attributes</a></li>
+    <li><a href="index.html#metas_seo">Metaetiquetas para SEO</a></li>
+    <li><a href="index.html#metas_social">Metaetiquetas para Redes Sociales</a></li>
+    <li><a href="index.html#accesibilidad_web">Accesibilidad Web</a></li>
   </ul>
   <hr>
   <h2 id="encabezados">Encabezados HTML</h2>
@@ -496,6 +509,24 @@
     <li data-id="3" data-name="autumm">Otoño</li>
     <li data-id="4" data-name="wintern">Invierno</li>
   </ul>
+  <a href="index.html#inicio">⏫</a>
+  <hr>
+  <h2 id="metas_seo">Metaetiquetas para SEO</h2>
+  <a href="index.html#inicio">⏫</a>
+  <hr>
+  <h2 id="metas_social">Metaetiquetas para Redes Sociales</h2>
+  <a href="index.html#inicio">⏫</a>
+  <hr>
+  <h2 id="accesibilidad_web">Accesibilidad Web</h2>
+  <h3 role="title">Las Estacciones Del Año</h3>
+  <ul role="list">
+    <li tabindex="1" role="listitem">Primavera</li>
+    <li tabindex="2" role="listitem">Verano</li>
+    <li tabindex="3" role="listitem">Otoño</li>
+    <li tabindex="4" role="listitem">Invierno</li>
+  </ul>
+  <a role="link" aria-label="En este enlace encontrarás más información sobre las estaciones del año" href="#"
+    target="_blank">Más Información...</a>
   <a href="index.html#inicio">⏫</a>
   <script>
     console.log("Hola estamos aprendiendo HTML")
